myproject/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myproject
spec:
  replicas: 1
  selector:
    matchLabels:
      app: myproject
  template:
    metadata:
      labels:
        app: myproject
    spec:
      containers:
        - name: myproject
          image: richamishra006/my-behave-tests:v2
          ports:
            - containerPort: 8000
