myproject/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myproject
spec:
  selector:
    app: myproject
  ports:
    - name: http
      port: 80
      targetPort: 8000
  type: NodePort
